# django_project_initializer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
django_project_initializer/: __init__.py  project_initializer.py
src/django_project_initializer/: __init__.py
